# FRASIER_Robot_WPI

./: README.md
PARbot_scripts/: parbot_core_login.sh  ping_parbot.sh  router_ping.sh  sftp_parbot.sh  shutdown_parcore.sh
PARbotbatch/: Disable_Following.bat  Disable_Teleop.bat  ESTOP.bat  ESTPOP.bat  Enable_Following.bat  Enable_Teleop.bat  RESUME.bat  Shutdown.bat  cmd.sh  parbot_batch_and_plink.lolz  putty-login.bat  test.bat
computer_vision/frasier_computer_vision/: CMakeLists.txt  CMakeLists.txt~  package.xml
computer_vision/frasier_computer_vision/include/FRASIER/Objects/: euclidean_cluster.h  euclidean_cluster.h~  region_growing.h  region_growing.h~  surface_reconstruction.h  surface_reconstruction.h~
computer_vision/frasier_computer_vision/launch/: frasier_computer_vision.launch  frasier_computer_vision.launch~  parbot_computer_vision.launch  softkinetic.rviz
computer_vision/frasier_computer_vision/src/Filters/: passthrough_filter.cpp  passthrough_filter.cpp~
computer_vision/frasier_computer_vision/src/Objects/: cylinder_fit_cup.cpp  cylinder_fit_cup.cpp~  euclidean_cluster.cpp  euclidean_cluster.cpp~  region_growing.cpp  region_growing.cpp~  surface_reconstruction.cpp  surface_reconstruction.cpp~
computer_vision/frasier_computer_vision/src/Segmentations/: outlier_segmentation.cpp
frasier_master/: CMakeLists.txt  package.xml
frasier_master/launch/: frasier_master_bringup.launch  frasier_master_bringup.launch~
frasier_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
frasier_msgs/msg/: Command_MSG.msg
frasier_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
frasier_teleop/include/frasier_teleop/: frasier_teleop.h  frasier_teleop.h~  frasier_teleop_main.h  frasier_teleop_main.h~
frasier_teleop/launch/: frasier_teleop.launch
frasier_teleop/src/: frasier_teleop.cpp
frasier_ui/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
frasier_ui/include/frasier_ui/: FRASIER_Pub_Handler.h  UI_Command_Handler.h  UI_Command_Handler.h~
frasier_ui/src/: FRASIER_Pub_Handler.cpp  FRASIER_Pub_Handler.cpp~  UI_Command_Handler.cpp  resume_ui.cpp
frasier_ui/src/GUI/: gui_disabled.cpp  gui_enabled.cpp
frasier_ui/src/Object_Detection/: close_range_senz3d_camera_disabled.cpp  close_range_senz3d_camera_enabled.cpp
frasier_ui/src/Teleop/: teleop_disabled.cpp  teleop_enabled.cpp
parbot_master/: CMakeLists.txt  CMakeLists.txt~
parbot_master/launch/: frasier_master_bringup.launch~  master_teleop_bringup.launch  parbot_master_bringup.launch  parbot_master_bringup.launch~
parbot_pathplanning/: CMakeLists.txt
parbot_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml
parbot_teleop/launch/: parbot_teleop.launch
parbot_ui/: CMakeLists.txt  CMakeLists.txt~
parbot_ui/src/CV/: Enable_Senz3D.cpp
