<?xml version="1.0"?>
<package>
  <name>frasier_msgs</name>
  <version>0.0.0</version>
  <description>The frasier_msgs package</description>


  <maintainer email="vcunha@wpi.edu">Cunha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package>
