<?xml version="1.0"?>
<package>
  <name>frasier_teleop</name>
  <version>0.0.0</version>
  <description>The frasier_teleop package</description>



  <maintainer email="vcunha@wpi.edu">Cunha</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roboteq_mc_nxtgen_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roboteq_mc_nxtgen_driver</run_depend>
  <run_depend>roscpp</run_depend>



  <export>

  </export>
</package>
